# ASI_projekt

./: .dockerignore  .gitignore  Dockerfile  README.md  automl_autogluon.py  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-automl.txt  requirements-serve.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  continuous-training.yml
conf/base/: catalog.yml  mlflow.yml  parameters.yml  parameters_automl.yml  parameters_data_ingestion.yml  parameters_data_modeling.yml  parameters_data_preparation.yml  parameters_feature_engineering.yml
conf/local/: kaggle_temp.json
data/06_models/: country_label_encoder.json  drift_baseline.json
data/sample/: temperatures_sample.csv
docs/: architecture.drawio  architektura.md
docs/source/: conf.py
notebooks/: eda_01_raw_temperatures.ipynb
scripts/: build_serving_artifacts.py  retrain.py
src/new_kedro_project/: hooks.py  pipeline_registry.py  settings.py
src/new_kedro_project/pipelines/: serve.py
src/new_kedro_project/pipelines/automl/: __init__.py  nodes.py  pipeline.py
src/new_kedro_project/pipelines/data_ingestion/: __init__.py  nodes.py  pipeline.py
src/new_kedro_project/pipelines/data_modeling/: __init__.py  nodes.py  pipeline.py
src/new_kedro_project/pipelines/data_preparation/: __init__.py  nodes.py  pipeline.py
src/new_kedro_project/pipelines/evaluation/: nodes.py  pipeline.py
src/new_kedro_project/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
tests/: test_data_modeling.py  test_evaluation.py  test_feature_engineering.py  test_run.py  test_serve.py
tests/pipelines/data_preparation/: test_pipeline.py
