[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "new_kedro_project"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=1.3.1",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibdataset, spark-sparkdataset]>=9.1",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
]

[project.scripts]
"new-kedro-project" = "new_kedro_project.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0"
]

[tool.setuptools.dynamic]
version = {attr = "new_kedro_project.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "new_kedro_project"
project_name = "New Kedro Project"
kedro_init_version = "1.3.1"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'PySpark']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = """
--cov-report term-missing \
--cov src/new_kedro_project -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
]
# W tym projekcie wezly Kedro celowo uzywaja print() do raportowania postepu,
# a API leniwie importuje ciezkie biblioteki - dlatego wylaczamy ponizsze reguly.
ignore = [
    "E501",     # dlugosc linii - pilnuje jej formatter
    "T201",     # print() - swiadomy sposob logowania postepu w wezlach
    "PLR2004",  # "magic values" w porownaniach - zbyt halasliwe (np. w testach)
    "PLR0913",  # duzo argumentow - normalne dla wezlow Kedro
    "PLC0415",  # importy wewnatrz funkcji - uzywane celowo (leniwe ladowanie)
    "PLW0603",  # global - potrzebne do leniwego, jednorazowego ladowania modelu
]

[tool.kedro_telemetry]
project_id = "596131af660e4bc5a60f75e77eceb2c2"
